[tool.poetry]
name = "deltalakepyspark"
version = "0.1.0"
description = ""
authors = ["Guilherme Chaves Volpato <volpato2103@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pyspark = "3.4.2"
delta-spark = "2.4.0"
jupyterlab = "^4.1.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
