[tool.poetry]
name = "payspark-trabalho"
version = "0.1.0"
description = ""
authors = ["Guilherme Marques Silveira <seu_email@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pyspark = "3.4.2"
jupyterlab = "^4.1.6"
delta-spark = "2.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
